feat(postgrest-webclient): separe webclient from interface